--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* 透過@apply可以將常用到的class注入styles.css，讓其他的元件快速使用
+，當有class多次被使用可以利用這種方法可以使代碼重複利用且增加可讀性 */
+.card{
+  @apply bg-white rounded overflow-hidden shadow-md relative hover:shadow-lg
+}
+
+.badge{
+  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2
+}
+
+.btn{
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
+}
