--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,18 @@
 }
 
 .badge{
-  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2
+  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2 flex items-center
 }
 
 .btn{
   @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
 }
+
+.input{
+  @apply px-3 py-2 border border-gray-200 rounded-md w-full focus:outline-none focus:ring-1 focus:ring-primary
+}
+
+.menu-btn{
+  @apply px-2 h-10 bg-slate-900 font-semibold rounded-md mr-2 text-gray-400 hover:bg-slate-700 hover:text-white
+}
+
